--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,6 +12,7 @@ description: |
 
 grade: devel
 confinement: strict
+compression: lzo
 
 apps:
   temporal:
@@ -28,3 +29,5 @@ parts:
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags --long | sed "s/^v//")
+    prime:
+      - bin/temporal
