--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,6 +12,7 @@ description: |
 
 grade: stable
 confinement: strict
+compression: lzo
 
 apps:
   temporal:
@@ -29,3 +30,5 @@ parts:
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags | sed "s/^v//")
+    prime:
+      - bin/temporal
