--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,7 +24,7 @@ parts:
   temporal-cli:
     plugin: go
     source: https://github.com/temporalio/cli.git
-    source-tag: "v0.12.0-rc.3"
+    source-tag: "v0.12.0"
     build-snaps:
       - go
     override-pull: |
